Tst/Tests/New/Neg/Null/DotExpr.p
main machine Entry {
    start state foo {
        entry {
            null.foo = 1;
        }
    }
}
